Thu Sep 14 21:28:14 CEST 2006 (acab)
------------------------------------
  * contrib/phishing: Misc files related to the phishing code

Thu Sep 14 21:07:43 CEST 2006 (tk)
----------------------------------
  * clamd: some database settings were being lost after reload

Thu Sep 14 20:53:28 CEST 2006 (acab)
------------------------------------
  * clamd: phishing merge complete!

Thu Sep 14 19:36:25 CEST 2006 (acab)
------------------------------------
  * clamscan: added phishing module command line options

Thu Sep 14 19:07:21 CEST 2006 (acab)
------------------------------------
  * libclamav/mbox.c: Fixing a fragment of code left behind during the merge

Thu Sep 14 10:01:21 BST 2006 (njh)
----------------------------------
  * libclamav:	Phixed some buffer underruns and NULL pointers

Thu Sep 14 09:12:03 BST 2006 (trog)
-----------------------------------
  * libclamav/unrar/unrar.c, unrar20.c, unrarppm.c: improve handling of
		corrupted files.

Thu Sep 14 00:35:56 CEST 2006 (acab)
------------------------------------
  * docs: Added preliminary documentation related to Edvin phishing module.
          Big thanks to Google for the SoC, to Edvin for the very good
	  work and finally to paste.debian.org for helping with the merge!

  * libclamav: Using CL_EXPERIMENTAL instead of CONFIG_EXPERIMENTAL
               in suecrypt decryptor

Wed Sep 13 22:38:22 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Committed ACAB's merge of Edvin's Phish code,
			configure --enable-experimental to use it.

Wed Sep 13 19:41:20 CEST 2006 (acab)
------------------------------------
  * libclamav/mbox.c: checkURLs reprototyped to prepare the merge of the
                      phishing module

Wed Sep 13 17:46:06 CEST 2006 (tk)
----------------------------------
  * freshclam/dns.c: try to handle broken dns servers (such as in SpeedTouch
		     510), the workaround must be enabled during installation