@@ -73,6 +73,12 @@ Disable scanning of mail files.
 \fB\-\-no\-phishing\fR
 Disable detection of phishing messages.
 .TP 
+\fB\-\-no\-phishing\-scan\-urls\fR
+Disable url-based phishing detection. (Only available in experimental builds)
+.TP
+\fB\-\-phish\-scan\-alldomains\fR
+Enable phishing detection for all domains (might lead to false positives!).(Only available in experimental builds)
+.TP
 \fB\-\-no\-algo\fR
 In some cases (eg. complex malware, exploits in graphic files, and others), ClamAV uses special algorithms to provide accurate detection. This option disables the algorithmic detection.
 .TP 
